// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`my test suite works 1`] = `
<canvas
  data-snapshot-image="527984a8e4f58f82482d61f779bf70461bc463dcfb98fb9f23387b5dc09afb62bf40aacd144e33d774d580be901ba87ac665b994dc594e18ecaf93b8c1bae784"
  height="200"
  width="200"
/>
`;

exports[`my test suite works for canvas wrapped by other elements 1`] = `
<div>
  <canvas
  data-snapshot-image="527984a8e4f58f82482d61f779bf70461bc463dcfb98fb9f23387b5dc09afb62bf40aacd144e33d774d580be901ba87ac665b994dc594e18ecaf93b8c1bae784"
  height="200"
  width="200"
/>
</div>
`;
